Fixed up some visual bugs
Text not aligning properlly and incorrectly stacking things

--- a/main.css
+++ b/main.css
@@ -33,25 +33,32 @@ html, body {
     right: 10px;
 }
 
+#header > * {
+    text-align: right;
+}
+
 #heading {
     font-family: "Trebuchet MS";
     color: #CC1514;
     font-size: 20em;
-    position: absolute;
     top: 20%;
-    right: 5%;
 }
 
 #subHeading {
     font-family: "Trebuchet MS";
     font-size: 2em;
     color: #1F394C;
-    position: absolute;
     bottom: 20%;
-    right: 5%;
-    text-align: right;
     opacity: 0;
     transition: opacity 1s;
+}
+
+.pageSection {
+    display: inline-block;
+    width: 95%;
+    height: 100%;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
 }
 
 .title {
@@ -78,11 +85,4 @@ p {
     right: 0;
     transition: opacity 1s;
     z-index: -1;
-}
-
-#header, #about {
-    display: inline-block;
-    position: static;
-    width: 100%;
-    height: 100%;
 }
